kubernetes/blazorcharts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazorcharts
  labels:
    app: blazorcharts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blazorcharts
  template:
    metadata:
      name: blazorcharts
      labels:
        app: blazorcharts
    spec:
      containers:
        - name: blazorcharts
          image: blazorcharts
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: blazorcharts
spec:
  selector:
    app: blazorcharts
  ports:
    - port: 8080
      name: http
