kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazorcharts-ingress
  annotations:
    # Needed for SignalR
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  ingressClassName: nginx
  rules:
    - host: 'localhost'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blazorcharts
                port: 
                  name: http
